# operations-debs-contenttranslation-apertium-hbs-slv

./: AUTHORS  Makefile.am  NOTES  README  apertium-hbs-slv.hbs-slv.dix.old  apertium-hbs-slv.hbs-slv.lex  apertium-hbs-slv.hbs-slv.lrx  apertium-hbs-slv.hbs-slv.t1x  apertium-hbs-slv.hbs-slv.t2x  apertium-hbs-slv.hbs.tsx  apertium-hbs-slv.post-slv.dix  apertium-hbs-slv.slv-hbs.rlx  apertium-hbs-slv.slv-hbs.t1x  apertium-hbs-slv.slv-hbs.t2x  apertium-hbs-slv.slv-hbs_BS.lrx  apertium-hbs-slv.slv-hbs_HR.lrx  apertium-hbs-slv.slv-hbs_SR.lrx  apertium-hbs-slv.slv.tsx  apertium-hbs-slv_0.1.0~r59294.orig.tar.bz2.delta  apertium-hbs-slv_0.1.0~r59294.orig.tar.bz2.id  apertium-hbs-slv_0.5.0~r43858.orig.tar.gz.delta  apertium-hbs-slv_0.5.0~r43858.orig.tar.gz.id  configure.ac  hbs-slv.prob  k.sh  modes.xml  paradigm-test.sh  regression-tests.sh  separate.sh  test-hbs-slv.sh  test-slv-hbs.sh  translate_stories.sh
debian/: changelog  control
dev/: adverbs-neosnovniki-prevedeno.txt  amigos_adjectives.txt  amigos_nouns.txt  amigos_vblex.txt  apertium-sh-sl.sh-sl.dix.generated  apertium-sl-sr.sl-sr.dix  inconsistency.sh  missing-words.sh  sh_original.txt  sl.translated.txt  sl_original.txt  story_Pavao1_HR_original.txt  story_Pavao1_SL_original.txt  story_Pavao2_HR_original.txt  testvoc-summary.sh-sl.txt  testvoc-summary.sl-sh.txt  testvoc.sh  zamjenice.txt
dev/eval/: errors_story1.txt  errors_story2.txt  story1_hr.txt  story1_sl.txt  story1_sl_uncorrected.txt  story1_sl_uncorrected_google.txt  story2_hr.txt  story2_sl.txt  story2_sl_uncorrected.txt
dev/eval/corpora/: Makefile  rezultat
dev/eval/sh-sl_story1/: README  translate.sh  unknown.words.sh
dev/eval/sh-sl_story2/: translate.sh
dev/eval/sl-sh_story1/: README  translate.sh
dev/eval/sl-sh_story2/: translate.sh
dev/eval/ustav-sfrj/: ustav-raw.sh  ustav-raw.sl
dev/paper/eval/: jame.sl.original.txt  prevedi.sh  sonce.sl.original.txt  translate_and_evaluate.sh  volitve.bhs.original.txt
dev/paper/eval-gtrans/: README  jame.bhs.original.txt  maraton.bhs.original.txt  maraton.sl.original.txt  mercator.bhs.original.txt  prevedi.sh
dev/paper/eval-gtrans/bhs-sl/: evaluate.sh  jame.WER.PER.txt  jame.sh-sl  maraton.WER.PER.txt  maraton.sh-sl  mercator.WER.PER.txt  mercator.sh-sl  mercator.sl.original.txt  sonce.WER.PER.txt  sonce.sh-sl  volitve.WER.PER.txt  volitve.sh-sl
dev/paper/eval-gtrans/sl-bhs/: evaluate.sh  jame.WER.PER.txt  jame.sl-sh  maraton.WER.PER.txt  maraton.sl-sh  mercator.WER.PER.txt  mercator.sl-sh  sonce.sl-sh  sunce.WER.PER.txt  sunce.bhs.original.txt  volitve.WER.PER.txt  volitve.sl-sh
dev/paper/eval/hbs-slv/: evaluate.sh  jame.WER.PER.txt  jame.hbs-slv  maraton.WER.PER.txt  maraton.hbs-slv  mercator.WER.PER.txt  mercator.hbs-slv  sonce.WER.PER.txt  sonce.hbs-slv  volitve.WER.PER.txt  volitve.hbs-slv  volitve.hbs-slv.ref
dev/paper/eval/slv-hbs/: evaluate.sh  jame.WER.PER.txt  jame.slv-hbs  maraton.WER.PER.txt  maraton.slv-hbs  maraton.slv-hbs.ref  mercator.WER.PER.txt  mercator.slv-hbs  mercator.slv-hbs.ref  sonce.slv-hbs  sunce.WER.PER.txt  sunce.slv-hbs.ref  volitve.WER.PER.txt  volitve.slv-hbs
dev/paper/lrec2014_version/: Makefile  TODOs.md  apertium-hbs-slv.bib  apertium-hbs-slv.tex  conclusions.tex  design.tex  development.tex  disambiguation.tex  evaluation.tex  introduction.tex  lexicaltransfer.tex  quantitativeevaluationtable.tex  reviewers_comments.md  transfer.tex
dev/paper/lrec2014_version/images/: chart.eps  south-slavic-apertium.eps
dev/paper/mtsxiv_version/: Makefile  conclusions.tex  coveragetable.tex  design.tex  development.tex  disambiguation.tex  evaluation.tex  introduction.tex  lexicaltransfer.tex  mtsxivslsh.aux  mtsxivslsh.bbl  mtsxivslsh.bib  mtsxivslsh.blg  mtsxivslsh.tex  transfer.tex
dev/paper/mtsxiv_version/images/: Makefile  chart.eps
dev/slides/: coveragetable.tex  notes.txt  quantitativeevaluationtable.tex  src.tex  src.tex~  statstable.tex
dev/slides/images/: chart.eps  chart.eps~
